Added MarshallableOutBuilder for file/http protocols #423