@@ -7,14 +7,39 @@ import org.junit.Test;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URL;
 
 import static org.junit.Assert.assertEquals;
 
 public class MarshallableOutBuilderTest {
     @Test
+    public void fileAppend() throws IOException {
+        final String expected = "" +
+                "mid: mid\n" +
+                "next: 1\n" +
+                "echo: echo-1\n" +
+                "...\n" +
+                "mid2: mid2\n" +
+                "next2: word\n" +
+                "echo: echo-2\n" +
+                "...\n";
+        file("?append=true", expected);
+    }
+
+    @Test
     public void file() throws IOException {
+        final String expected = "" +
+                "mid2: mid2\n" +
+                "next2: word\n" +
+                "echo: echo-2\n" +
+                "...\n";
+        file("", expected);
+    }
+
+    public void file(String query, String expected) throws IOException {
         final File file = new File(OS.getTarget(), "tmp-" + System.nanoTime());
-        final MarshallableOut out = MarshallableOut.builder(file.toURL()).get();
+        final URL url = new URL("file://" + file.getAbsolutePath() + query);
+        final MarshallableOut out = MarshallableOut.builder(url).get();
         ITop top = out.methodWriter(ITop.class);
         top.mid("mid")
                 .next(1)
@@ -23,15 +48,7 @@ public class MarshallableOutBuilderTest {
                 .next2("word")
                 .echo("echo-2");
         final Bytes bytes = BytesUtil.readFile(file.getAbsolutePath());
-        assertEquals("" +
-                "mid: mid\n" +
-                "next: 1\n" +
-                "echo: echo-1\n" +
-                "...\n" +
-                "mid2: mid2\n" +
-                "next2: word\n" +
-                "echo: echo-2\n" +
-                "...\n", bytes.toString());
+        assertEquals(expected, bytes.toString());
     }
 }
 
